demo-apps/quark-camel/src/main/resources/ocp/deploy.yml
---
apiVersion: "apps.openshift.io/v1"
kind: "DeploymentConfig"
metadata:
  labels:
    app: "quark-camel"
    group: "demo"
  name: "quark-camel"
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: "quark-camel"
    group: "demo"
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: "Rolling"
  template:
    metadata:
      labels:
        app: "quark-camel"
        group: "demo"
    spec:
      containers:
      - env:
        - name: "AB_JMX_EXPORTER_CONFIG"
          value: "prometheus-config.yml"
        image: "alainpham/quark-camel:latest"
        imagePullPolicy: "Always"
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: "/actuator/health"
            port: 8081
            scheme: "HTTP"
          initialDelaySeconds: 180
          successThreshold: 1
        name: "spring-boot"
        ports:
        - containerPort: 8080
          name: "http"
          protocol: "TCP"
        - containerPort: 9779
          name: "prometheus"
          protocol: "TCP"
        - containerPort: 8778
          name: "jolokia"
          protocol: "TCP"
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: "/actuator/health"
            port: 8081
            scheme: "HTTP"
          initialDelaySeconds: 10
          successThreshold: 1
        resources:
          limits:
            cpu: "2.0"
            memory: "512Mi"
          requests:
            cpu: "0.2"
            memory: "128Mi"
        securityContext:
          privileged: false
        volumeMounts:
        - mountPath: "/deployments/tls"
          name: "tls-secret-volume"
          readOnly: true
        - mountPath: "/deployments/config"
          name: "prop-secret-volume"
          readOnly: true
      volumes:
      - name: "tls-secret-volume"
        secret:
          defaultMode: 420
          secretName: "quark-camel-tls-secret"
      - name: "prop-secret-volume"
        secret:
          defaultMode: 420
          secretName: "quark-camel-prop-secret"
  triggers:
  - type: "ConfigChange"
---
apiVersion: "v1"
kind: "Service"
metadata:
  annotations:
    prometheus.io/port: "9779"
    prometheus.io/scrape: "true"
  labels:
    expose: "true"
    app: "quark-camel"
    group: "demo"
  name: "quark-camel"
spec:
  ports:
  - name: "http"
    port: 8080
    protocol: "TCP"
    targetPort: 8080
  selector:
    app: "quark-camel"
    group: "demo"
---
apiVersion: "v1"
kind: "Route"
metadata:
  annotations:
    haproxy.router.openshift.io/balance: "roundrobin"
  labels:
    app: "quark-camel"
    group: "demo"
  name: "quark-camel"
spec:
  port:
    targetPort: "http"
  to:
    kind: "Service"
    name: "quark-camel"
status: {}
